patient-dashboard overlapping content fixed

--- a/ui/src/app/shared/components/shared-error/shared-error.component.scss
+++ b/ui/src/app/shared/components/shared-error/shared-error.component.scss
@@ -8,6 +8,6 @@
 
 .error-detail {
     height: 60vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+    // overflow-y: hidden;
+    // overflow-x: auto;
 }
