--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -306,7 +306,7 @@ mat-dialog-container {
 }
 
 .patient-profile-sticky {
-  width: 100%;
+  width: 100px;
   position: fixed;
   z-index: 100;
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
